VAR E COBSTANTS